2011-05-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Workarounds for compiler warnings.

2011-05-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Exact cost for builtin function calls.

2011-05-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Fixed bug in Thorup heuristic, that resulted in much higher width of tree-decomposition.

2011-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* Merge from trunk.

2011-05-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Remove unnecessary statement, debug message cleanup.

2011-05-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/rallo2.cc:
	  Debug message cleanup.

2011-05-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Ported reorganization of cast to bool from trunk.

2011-05-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3303325.c:
	  Merge from trunk: Fixed bug #3303325.

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Code cleanup wrt. temporary labels.

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* configure.in:
	  Give an error when boost is not detected.

2011-05-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-16 Philipp Klaus Krause <pkk@spth.de>

	* src/z80/gen.c:
	  Fixed crash when running on cygwin.

2011-05-15 Philipp Klaus Krause <pkk@spth.de>

	* Merge from trunk.
